Menu created for popular and top rated catagory. Updated TODO list

--- a/app/src/main/res/menu/movie_menu.xml
+++ b/app/src/main/res/menu/movie_menu.xml
@@ -10,7 +10,7 @@
         app:showAsAction="never"/>
 
     <item
-        android:id="top_rated_menu"
+        android:id="@+id/top_rated_menu"
         android:title="Top rated"
         android:orderInCategory="100"
         app:showAsAction="never"/>
